--- a/index.html
+++ b/index.html
@@ -19,15 +19,44 @@
 <body>
     <!-- Header section start here -->
     <header>
+        <div class="container">
         <!-- Navigatin -->
-        <nav>
-            <div class="logo">
-                <h1>Fitness</h1>
-            </div>
-            
-        </nav>
-
+            <nav>
+                <div class="logo">
+                    <h1>Fitness</h1>
+                </div>
+                <div class="hamburger">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="" class="active">Home</a></li>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">About</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
+    <!-- hero section -->
+    <section class="hero">
+        <div class="container">
+            <div class="hero-container">
+                <div class="left-side">
+                    <h1>Get body in <span class="italic-text">shape</span> & stay healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <button class="primary-btn">Join Club Now!</button>
+                    <button class="secondary-btn">Download App</button>
+                </div>
+                <div class="right-side">
+                    <img src="images/Images 2.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/08d308fc94.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
