--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Header section start here -->
     <header>
         <div class="container">
-        <!-- Navigatin -->
+            <!-- Navigatin -->
             <nav>
                 <div class="logo">
                     <h1>Fitness</h1>
@@ -45,13 +45,125 @@
             <div class="hero-container">
                 <div class="left-side">
                     <h1>Get body in <span class="italic-text">shape</span> & stay healthy</h1>
-                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to
+                        help you get fit and stay fit!</p>
                     <button class="primary-btn">Join Club Now!</button>
                     <button class="secondary-btn">Download App</button>
                 </div>
                 <div class="right-side">
                     <img src="images/Images 2.png" alt="">
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- habits section -->
+    <section class="habits">
+        <div class="container">
+            <h2 class="section-title">Change Your Habits</h2>
+            <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                of income or access to a gym.</p>
+            <div class="habit-container">
+                <div class="habit">
+                    <img src="images/image 2.png" alt="">
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 3.png" alt="">
+                    <h4>Time</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 4.png" alt="">
+                    <h4>Practice</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 5.png" alt="">
+                    <h4>Weight Loss</h4>
+                    <p>We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- run and extra section -->
+    <section class="card">
+        <div class="container">
+            <div class="card-container">
+                <div class="card-left-side">
+                    <h2>Run an Extra
+                        Mile Easily</h2>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a gym. With hundreds of professional workouts.</p>
+                    <button class="primary-btn">Join Now</button>
+                </div>
+                <div class="card-right-side">
+                    <img src="images/run.jpg" alt="">
+                </div>
+            </div>
+            <div class="bm-cal">
+                <h2>BMI Calculator</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym.</p>
+            </div>
+        </div>
+    </section>
+    <section class="BM">
+        <div class="BM-container">
+            <div class="chart">
+                <h3>BMI Calculator Chart</h3>
+                <table>
+                    <tr>
+                        <th>BMI</th>
+                        <th>Weight Status</th>
+                    </tr>
+                    <tr>
+                        <td>Below 18.5</td>
+                        <td>Underweight</td>
+                    </tr>
+                    <tr>
+                        <td>18.5 - 24.9</td>
+                        <td>Healthy</td>
+                    </tr>
+                    <tr>
+                        <td>25.0 - 29.9</td>
+                        <td>Overweight</td>
+                    </tr>
+                    <tr>
+                        <td>30.0 - and Above</td>
+                        <td>Obese</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="calculator">
+                <h3>Calculate your BMI</h3>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                    gym. </p>
+                <form action="#">
+                    <label for="height">Height (cm):</label>
+                    <input type="number" id="height" name="height" required>
+
+                    <label for="weight">Weight (kg):</label>
+                    <input type="number" id="weight" name="weight" required>
+
+                    <label for="age">Age:</label>
+                    <input type="number" id="age" name="age" required>
+
+                    <label for="sex">Sex:</label>
+                    <select id="sex" name="sex" required>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
+
+                    <label for="activity">Activity Level:</label>
+                    <select id="activity" name="activity" required>
+                        <option value="low">Low</option>
+                        <option value="moderate">Moderate</option>
+                        <option value="high">High</option>
+                    </select>
+
+                    <button type="submit" class="primary-btn">Calculate</button>
+                </form>
             </div>
         </div>
     </section>
