--- a/index.html
+++ b/index.html
@@ -109,61 +109,89 @@
         </div>
     </section>
     <section class="BM">
-        <div class="BM-container">
-            <div class="chart">
-                <h3>BMI Calculator Chart</h3>
-                <table>
-                    <tr>
-                        <th>BMI</th>
-                        <th>Weight Status</th>
-                    </tr>
-                    <tr>
-                        <td>Below 18.5</td>
-                        <td>Underweight</td>
-                    </tr>
-                    <tr>
-                        <td>18.5 - 24.9</td>
-                        <td>Healthy</td>
-                    </tr>
-                    <tr>
-                        <td>25.0 - 29.9</td>
-                        <td>Overweight</td>
-                    </tr>
-                    <tr>
-                        <td>30.0 - and Above</td>
-                        <td>Obese</td>
-                    </tr>
-                </table>
+        <div class="container">
+            <div class="bm-container">
+                <div class="chart">
+                    <h3>BMI Calculator Chart</h3>
+                    <table>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underweight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="calculator">
+                    <h3>Calculate your BMI</h3>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access
+                        to a
+                        gym. </p>
+                    <form action="#">
+                        <div>
+                            <input type="number" id="height" name="height" placeholder="Height/cm" required>
+                            <input type="number" id="weight" name="weight" placeholder="Weight/kg" required>
+                        </div>
+                        <div class="sparate">
+                            <input type="number" id="age" name="age" placeholder="Age" required>
+                            <select id="sex" name="sex" required>
+                                <option value="">Sex</option>
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                            </select>
+                        </div>
+                        <div>
+                            <select id="activity" name="activity" required>
+                                <option value="">Select an activity factor</option>
+                                <option value="low">Low</option>
+                                <option value="moderate">Moderate</option>
+                                <option value="high">High</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="primary-btn">Calculate</button>
+                    </form>
+                </div>
             </div>
-            <div class="calculator">
-                <h3>Calculate your BMI</h3>
-                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
-                    gym. </p>
-                <form action="#">
-                    <label for="height">Height (cm):</label>
-                    <input type="number" id="height" name="height" required>
-
-                    <label for="weight">Weight (kg):</label>
-                    <input type="number" id="weight" name="weight" required>
-
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age" required>
-
-                    <label for="sex">Sex:</label>
-                    <select id="sex" name="sex" required>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-
-                    <label for="activity">Activity Level:</label>
-                    <select id="activity" name="activity" required>
-                        <option value="low">Low</option>
-                        <option value="moderate">Moderate</option>
-                        <option value="high">High</option>
-                    </select>
-
-                    <button type="submit" class="primary-btn">Calculate</button>
-                </form>
+        </div>
+    </section>
+    <!-- our team -->
+    <section class="our-team">
+        <div class="container">
+            <h2 class="section-title">Meet Our Team</h2>
+            <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="members">
+                <div class="member">
+                    <img src="images/trainer1.png" alt="">
+                </div>
+                <div class="member">
+                    <img src="images/trainer2.png" alt="">
+                </div>
+                <div class="member">
+                    <img src="images/trainer3.png" alt="">
+                </div>
+                <div class="member">
+                    <img src="images/trainer4.png" alt="">
+                </div>
+                <div class="member">
+                    <img src="images/trainer5.png" alt="">
+                </div>
+                <div class="member">
+                    <img src="images/trainer6.png" alt="">
+                </div>
             </div>
         </div>
     </section>
