--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
     <section class="our-team">
         <div class="container">
             <h2 class="section-title">Meet Our Team</h2>
-            <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p class="section-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                of income or access to a gym.</p>
             <div class="members">
                 <div class="member">
                     <img src="images/trainer1.png" alt="">
@@ -195,6 +196,39 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-container">
+                <div class="company-details">
+                    <div class="logo">
+                        <h1>Fitness</h1>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    </div>
+                </div>
+                <div class="get-start-1">
+                    <h3 class="get-start-title">Get Started</h3>
+                    <div class="links">
+                        <a href="">Service</a>
+                        <a href="">Contact Us</a>
+                        <a href="">Affiliate Program</a>
+                        <a href="">About Us</a>
+                    </div>
+                </div>
+                <div class="get-start-2">
+                    <h3 class="get-start-title">Get Started</h3>
+                    <div class="links">
+                        <a href="">Fitness</a>
+                        <a href="">Platform</a>
+                        <a href="">Workout Libary</a>
+                        <a href="">App Design</a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p class="copy">&copy; Fitness 2024. All rights reserved.</p>
+        </div>
+    </footer>
     <!-- font awsome -->
     <script src="https://kit.fontawesome.com/08d308fc94.js" crossorigin="anonymous"></script>
 </body>
