--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
                 </div>
                 <div class="right-side">
                     <img src="images/Images 2.png" alt="">
+                    <div class="box-1">
+                        <div class="one"></div>
+                        <div class="two">
+                            <h4>350+</h4>
+                            <p class="box-text">Video tutorial</p>
+                        </div>
+
+                    </div>
+                    <div class="box-2">
+                        <h4>500+</h4>
+                        <p class="box-text">Free Workout Videos</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -203,7 +215,8 @@
                 <div class="company-details">
                     <div class="logo">
                         <h1>Fitness</h1>
-                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or
+                            access to a gym. With hundreds of professional workouts.</p>
                     </div>
                 </div>
                 <div class="get-start-1">
