--- a/index.html
+++ b/index.html
@@ -208,6 +208,23 @@
             </div>
         </div>
     </section>
+    <!-- Extra area -->
+    <section class="about">
+        <div class="container">
+            <h3 class="about-second-title">About Us</h3>
+            <hr>
+            <h2 class="section-title">A Sound Mind Resides In A Healthy Body
+            </h2>
+            <p class="section-description">At Gym and Fitness, we believe that fitness and wellbeing are the
+                cornerstones of a full and vibrant life. Established in 2002, we began our journey as a family-owned
+                business dedicated to providing exceptional gym equipment at affordable prices. But, we dreamed bigger
+                than just being an ordinary fitness equipment supplier; we aspired to lead the industry.</p>
+            <div class="btn">
+                <button class="primary-btn">Join Us Today</button>
+                <button class="secondary-btn">Learn More</button>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer class="footer">
         <div class="container">
